# namebyauthor

./: .gitignore  LICENSE  README.md  namebyauthor.py  pyproject.toml
